chore: Refactor plots

--- a/data_analysis/eda.ipynb
+++ b/data_analysis/eda.ipynb
@@ -138,11 +138,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:14.318708Z",
      "start_time": "2025-06-17T17:24:14.310426Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql1"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from driver_position_train"
    ],
    "id": "3f6be6c464b668c2",
@@ -154,11 +157,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:14.331374Z",
      "start_time": "2025-06-17T17:24:14.327321Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql2"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from driver_position_test"
    ],
    "id": "eb0852836bb68bb1",
@@ -170,11 +176,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:14.344809Z",
      "start_time": "2025-06-17T17:24:14.340220Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql3"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from driver_position_val"
    ],
    "id": "8ff8039198c1facf",
@@ -565,7 +574,7 @@
     "plot_reg_dist(ax[1], driver_pos_test_labels, xlabel, ylabel, 'Test Set')\n",
     "plot_reg_dist(ax[2], driver_pos_val_labels, xlabel, ylabel, 'Validation Set')\n",
     "\n",
-    "plt.savefig('driver_position_dist.pdf')\n",
+    "plt.savefig('plots/driver_position_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "352653c7b9160561",
@@ -650,11 +659,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:15.271550Z",
      "start_time": "2025-06-17T17:24:15.267980Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql4"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from driver_top3_train"
    ],
    "id": "e754902ec00aa00a",
@@ -666,11 +678,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:15.300569Z",
      "start_time": "2025-06-17T17:24:15.295206Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql5"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from driver_top3_test"
    ],
    "id": "80631dae6fd41502",
@@ -682,11 +697,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:15.315800Z",
      "start_time": "2025-06-17T17:24:15.310563Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql6"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from driver_top3_val"
    ],
    "id": "4765c981053e787f",
@@ -1082,7 +1100,7 @@
     "plot_binary_dist(ax[1], top3_test_labels, 'Count', 'Test Set')\n",
     "plot_binary_dist(ax[2], top3_val_labels, 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('driver_top3_dist.pdf')\n",
+    "plt.savefig('plots/driver_top3_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "3a1b2ef3da031300",
@@ -1105,11 +1123,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:15.888559Z",
      "start_time": "2025-06-17T17:24:15.882727Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql7"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from driver_dnf_train"
    ],
    "id": "8bc71b5ac3057d94",
@@ -1121,11 +1142,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:15.905865Z",
      "start_time": "2025-06-17T17:24:15.901403Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql8"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from driver_dnf_test"
    ],
    "id": "7f079f3cefcf2081",
@@ -1137,11 +1161,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:15.924121Z",
      "start_time": "2025-06-17T17:24:15.919090Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql9"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from driver_dnf_val"
    ],
    "id": "e97f3132dc2a8d41",
@@ -1181,7 +1208,7 @@
     "plot_binary_dist(ax[1], dnf_test_labels, 'Count', 'Test Set')\n",
     "plot_binary_dist(ax[2], dnf_val_labels, 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('driver_dnf_dist.pdf')\n",
+    "plt.savefig('plots/driver_dnf_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "ab5dc52f35d31e5c",
@@ -1266,11 +1293,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:19.909098Z",
      "start_time": "2025-06-17T17:24:19.817099Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql10"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from user_churn_train"
    ],
    "id": "cd3da48ddfcc14e9",
@@ -1282,11 +1312,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:20.574408Z",
      "start_time": "2025-06-17T17:24:20.567654Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql11"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from user_churn_test"
    ],
    "id": "33e8d524b8098af",
@@ -1298,11 +1331,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:20.904506Z",
      "start_time": "2025-06-17T17:24:20.894927Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql12"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from user_churn_val"
    ],
    "id": "b751881bfb6b91a4",
@@ -1669,7 +1705,7 @@
     "plot_binary_dist(ax[1], user_churn_test_labels, 'Count', 'Test Set')\n",
     "plot_binary_dist(ax[2], user_churn_val_labels, 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('user_churn_dist.pdf')\n",
+    "plt.savefig('plots/user_churn_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "72c173e0f4c1ffd7",
@@ -1692,11 +1728,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:24.647833Z",
      "start_time": "2025-06-17T17:24:24.506697Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql13"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from item_sales_train"
    ],
    "id": "78b234b44b8391dd",
@@ -1708,11 +1747,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:26.316210Z",
      "start_time": "2025-06-17T17:24:26.308810Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql14"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from item_sales_test"
    ],
    "id": "66ba9e0f49f00a61",
@@ -1724,11 +1766,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:27.097874Z",
      "start_time": "2025-06-17T17:24:27.088660Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql15"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from item_sales_val"
    ],
    "id": "c51cdac2724cffb1",
@@ -2183,7 +2228,7 @@
     "plot_reg_dist(ax[1], item_sales_test_labels, 'Sales', 'Count', 'Test Set')\n",
     "plot_reg_dist(ax[2], item_sales_val_labels, 'Sales', 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('item_sales_dist.pdf')\n",
+    "plt.savefig('plots/item_sales_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "ba14f27ae3fc1ec0",
@@ -2218,7 +2263,7 @@
     "fig, ax = plt.subplots()\n",
     "sns.violinplot(x='Set', y='Sales', data=df, ax=ax, palette='Set2')\n",
     "\n",
-    "plt.savefig('item_sales_violinplot.pdf')\n",
+    "plt.savefig('plots/item_sales_violinplot.pdf')\n",
     "plt.show()"
    ],
    "id": "16cec47a8f200d95",
@@ -2316,11 +2361,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:47.929630Z",
      "start_time": "2025-06-17T17:24:47.918272Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql16"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from user_visits_train"
    ],
    "id": "2ac3628eacf63cf2",
@@ -2332,11 +2380,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:48.380865Z",
      "start_time": "2025-06-17T17:24:48.372741Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql17"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from user_visits_test"
    ],
    "id": "d7b4b4df8bec30f6",
@@ -2348,11 +2399,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:48.790425Z",
      "start_time": "2025-06-17T17:24:48.785295Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql18"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from user_visits_val"
    ],
    "id": "c464311970884ab2",
@@ -2901,7 +2955,7 @@
     "plot_binary_dist(ax[1], user_visits_test_labels, 'Count', 'Test Set')\n",
     "plot_binary_dist(ax[2], user_visits_val_labels, 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('user_visits_dist.pdf')\n",
+    "plt.savefig('plots/user_visits_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "b350aab506b3707e",
@@ -2924,11 +2978,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:55.855409Z",
      "start_time": "2025-06-17T17:24:52.657433Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql19"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql all_joined <<\n",
+    "%%sql\n",
     "SELECT\n",
     "-- from SearchInfo / SearchStream\n",
     "SI.SearchID,\n",
@@ -3231,7 +3288,7 @@
     "plt.subplots(figsize=(15,15))\n",
     "sns.heatmap(all_joined.corr(numeric_only=True), cmap = 'vlag_r', vmin = -1, vmax = 1)\n",
     "\n",
-    "plt.savefig('avito_user_visits.pdf')\n",
+    "plt.savefig('plots/avito_user_visits.pdf')\n",
     "plt.show()"
    ],
    "id": "56ab6464d7e049fb",
@@ -3254,11 +3311,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:58.705374Z",
      "start_time": "2025-06-17T17:24:58.699525Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql20"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from ad_ctr_train"
    ],
    "id": "5ebee7c5f06f29cc",
@@ -3270,11 +3330,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:58.752301Z",
      "start_time": "2025-06-17T17:24:58.748811Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql21"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from ad_ctr_test"
    ],
    "id": "862ae0210698918c",
@@ -3286,11 +3349,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:24:58.798360Z",
      "start_time": "2025-06-17T17:24:58.795003Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql22"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from ad_ctr_val"
    ],
    "id": "e1a2bef91adf458b",
@@ -3657,7 +3723,7 @@
     "plot_reg_dist(ax[1], ad_ctr_test_labels, 'Clicks', 'Count', 'Test Set')\n",
     "plot_reg_dist(ax[2], ad_ctr_val_labels, 'Clicks', 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('ad_ctr_dist.pdf')\n",
+    "plt.savefig('plots/ad_ctr_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "79153f16ec1ec71c",
@@ -3692,7 +3758,7 @@
     "fig, ax = plt.subplots()\n",
     "sns.violinplot(x='Set', y='Clicks', data=df, ax=ax, palette='Set2')\n",
     "\n",
-    "plt.savefig('ad_ctr_violinplot.pdf')\n",
+    "plt.savefig('plots/ad_ctr_violinplot.pdf')\n",
     "plt.show()"
    ],
    "id": "65eac42fd3ae21c6",
@@ -3790,11 +3856,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:00.292874Z",
      "start_time": "2025-06-17T17:25:00.288762Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql23"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from study_outcome_train"
    ],
    "id": "d7b72ab88867b9ef",
@@ -3806,11 +3875,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:00.624571Z",
      "start_time": "2025-06-17T17:25:00.618117Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql24"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from study_outcome_test"
    ],
    "id": "b65220e5bfb094e8",
@@ -3822,11 +3894,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:01.047976Z",
      "start_time": "2025-06-17T17:25:01.039985Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql25"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from study_outcome_val"
    ],
    "id": "cefb3271118e8868",
@@ -4193,7 +4268,7 @@
     "plot_binary_dist(ax[1], study_outcome_test_labels, 'Count', 'Test Set')\n",
     "plot_binary_dist(ax[2], study_outcome_val_labels, 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('study_outcome_dist.pdf')\n",
+    "plt.savefig('plots/study_outcome_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "8465bfcd039fab74",
@@ -4216,11 +4291,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:03.801553Z",
      "start_time": "2025-06-17T17:25:03.792311Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql26"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from site_success_train"
    ],
    "id": "8c3b88741c856d43",
@@ -4232,11 +4310,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:04.260833Z",
      "start_time": "2025-06-17T17:25:04.253248Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql27"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from site_success_test"
    ],
    "id": "276795e09e289ac1",
@@ -4248,11 +4329,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:04.674113Z",
      "start_time": "2025-06-17T17:25:04.667323Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql28"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from site_success_val"
    ],
    "id": "b1e5b6ae30232415",
@@ -4619,7 +4703,7 @@
     "plot_reg_dist(ax[1], site_success_test_labels, 'Success Rate', 'Count', 'Test Set')\n",
     "plot_reg_dist(ax[2], site_success_val_labels, 'Success Rate', 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('site_success_dist.pdf')\n",
+    "plt.savefig('plots/site_success_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "4e8e47df9e94b4f6",
@@ -4654,7 +4738,7 @@
     "fig, ax = plt.subplots()\n",
     "sns.violinplot(x='Set', y='Success Rate', data=df, ax=ax, palette='Set2')\n",
     "\n",
-    "plt.savefig('site_success_violinplot.pdf')\n",
+    "plt.savefig('plots/site_success_violinplot.pdf')\n",
     "plt.show()"
    ],
    "id": "4283c02068b5f295",
@@ -4690,11 +4774,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:07.742422Z",
      "start_time": "2025-06-17T17:25:07.733135Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql29"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from study_adverse_train"
    ],
    "id": "517a2d6ab1d699b1",
@@ -4706,11 +4793,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:08.115381Z",
      "start_time": "2025-06-17T17:25:08.109584Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql30"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from study_adverse_test"
    ],
    "id": "e8d645006ff19c06",
@@ -4722,11 +4812,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:08.498790Z",
      "start_time": "2025-06-17T17:25:08.491495Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql31"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from study_adverse_val"
    ],
    "id": "80cc2fe9157e06c7",
@@ -5093,7 +5186,7 @@
     "plot_reg_dist(ax[1], study_adverse_test_labels, 'Number of adverse events', 'Count', 'Test Set')\n",
     "plot_reg_dist(ax[2], study_adverse_val_labels, 'Number of adverse events', 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('study_adverse_dist.pdf')\n",
+    "plt.savefig('plots/study_adverse_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "11e45158ee12d28d",
@@ -5128,7 +5221,7 @@
     "fig, ax = plt.subplots()\n",
     "sns.violinplot(x='Set', y='Number of Adverse Events', data=df, ax=ax, palette='Set2')\n",
     "\n",
-    "plt.savefig('study_adverse_violinplot.pdf')\n",
+    "plt.savefig('plots/study_adverse_violinplot.pdf')\n",
     "plt.show()"
    ],
    "id": "4ed843d1de9ebcab",
@@ -5226,11 +5319,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:30.205898Z",
      "start_time": "2025-06-17T17:25:30.172063Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql32"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql train_df <<\n",
+    "%%sql\n",
     "from user_engagement_train"
    ],
    "id": "98e3135f97c01a22",
@@ -5242,11 +5338,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:30.235072Z",
      "start_time": "2025-06-17T17:25:30.230107Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql33"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql test_df <<\n",
+    "%%sql\n",
     "from user_engagement_test"
    ],
    "id": "916ae003eeadf66d",
@@ -5258,11 +5357,14 @@
     "ExecuteTime": {
      "end_time": "2025-06-17T17:25:30.265367Z",
      "start_time": "2025-06-17T17:25:30.260352Z"
+    },
+    "SqlCellData": {
+     "variableName$1": "df_sql34"
     }
    },
    "cell_type": "code",
    "source": [
-    "%%sql val_df <<\n",
+    "%%sql\n",
     "from user_engagement_val"
    ],
    "id": "6b28f49f594f7353",
@@ -5629,7 +5731,7 @@
     "plot_binary_dist(ax[1], user_engagement_test_labels, 'Count', 'Test Set')\n",
     "plot_binary_dist(ax[2], user_engagement_val_labels, 'Count', 'Validation Set')\n",
     "\n",
-    "plt.savefig('user_engagement_dist.pdf')\n",
+    "plt.savefig('plots/user_engagement_dist.pdf')\n",
     "plt.show()"
    ],
    "id": "6ee7193f4e1b47fd",
